@@ -4,15 +4,42 @@
   <p>Check out a working copy from a repository.</p>
 
   <attributes>
+
+    <grouped>
+    
+      <attribute name="recurse" required="false" default="true">
+        <doc>Set to "false" to operate on single directory only.</doc>
+        <doc><b>Don't use this in combination with 'depth' !</b></doc>
+      </attribute>
+
+      <attribute name="depth" required="false">
+        <doc>Specifies which resources have to be checked out. Following values are legal:
+        <ul>
+          <li>empty : Just checkout the top level (empty directory).</li>
+          <li>files : Just checkout toplevel files.</li>
+          <li>immediates : Checkout toplevel files and directories (unpopulated).</li>
+          <li>infinity : Checkout everything.</li>
+        </ul>
+        </doc>
+        <doc><b>Don't use this in combination with 'recurse' !</b></doc>
+      </attribute>
+
+    </grouped>
   
+    <attribute name="ignoreexternals" required="false" default="false">
+      <doc>If set to <code>true</code> svn externals will be skipped.</doc>
+      <doc><b>Only in combination with 'depth' !</b></doc>
+    </attribute>
+
+    <attribute name="force" required="false" default="false">
+      <doc>Enforces the execution of the checkout commands.</doc>
+      <doc><b>Only in combination with 'depth' !</b></doc>
+    </attribute>
+
     <attribute name="url" required="true">
       <doc>url to checkout from</doc>
     </attribute>
     
-    <attribute name="recurse" required="false" default="true">
-      <doc>Set to "false" to operate on single directory only.</doc>
-    </attribute>
-  
     <attribute name="destPath" required="true">
       <doc>destination directory</doc>
     </attribute>
