@@ -1,6 +1,7 @@
 
 * 1.3.1
 - Built against svnClientAdapter 0.9.102, Subversion 1.6.x, SVNKit 1.3.x
+- #1156: the checkout command now supports the depth parameter which is more accurate than the recursive parameter.
 - #1035: using the svntask as part of ant's parallel task should work properly now.
 - #587: it should be possible now to reject suspicious certificates so only trusted ones will be accepted.
 - #1272: command beginning and endings will be logged as verbose message as their mainly useful for
